crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__complete_tool_execution_sequence.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&clean)
---
(7 lines)
  fn hello() {
      println!("Hello, world!");
  }

  fn main() {
      hello();
  }
