crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__empty_content_handling.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&combined)
---
Message Box:
┌──────────────────────┐
└──────────────────────┘

Tool Result:
  (no output)
