crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__error_display_flow.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&clean)
---
┌───────────────────────────────────────┐
│ Error                                 │
├───────────────────────────────────────┤
│ Build failed                          │
│                                       │
│ missing dependency 'serde'            │
│                                       │
│ Help: Add serde = "1.0" to Cargo.toml │
└───────────────────────────────────────┘

┌──────────────────────────────────────────────┐
│ Auto-Fix                                     │
├──────────────────────────────────────────────┤
│ → Diagnosing issue...                        │
│ → Found: Cargo.toml missing serde dependency │
│ → Applying fix...                            │
└──────────────────────────────────────────────┘
