crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__message_box_commit_style.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&clean)
---
┌──────────────────────────────────────────────────────────┐
│ Commit Message                                           │
├──────────────────────────────────────────────────────────┤
│ Add user authentication flow                             │
│                                                          │
│ This enables users to securely log in before accessing   │
│ sensitive data. Implements JWT-based session management. │
└──────────────────────────────────────────────────────────┘
