crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__message_box_error.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&clean)
---
┌──────────────────────┐
│ Error                │
├──────────────────────┤
│ File not found       │
│                      │
│ /path/to/file.rs     │
└──────────────────────┘
