crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__message_box_simple.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&clean)
---
┌──────────────────────┐
│ Simple message       │
└──────────────────────┘
