crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__message_box_wide_content.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&clean)
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ This is a very long message that should wrap properly or be displayed in a box that accommodates it │
└─────────────────────────────────────────────────────────────────────────────────────────────────────┘
