crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__multiple_file_operations.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&clean)
---
=== READ ===
  (3 lines)
  fn main() {
      println!("test");
  }

=== WRITE ===
  File written: src/new.rs

=== EDIT ===
  Edit applied successfully
