crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__progress_bar_context_style.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&result)
---
Total: Some(200000)
At 50k tokens: 25%
At 120k tokens: 60%
At 170k tokens: 85%
