crates/coding-agent-cli/tests/snapshots/ui_visual_regression_tests__progress_bar_increment.snap
---
source: crates/coding-agent-cli/tests/ui_visual_regression_tests.rs
expression: normalize_whitespace(&result)
---
Initial: 0
After +10: 10
After +25: 35
After +65: 100 (percent: 100%)
